Bootstrap-card voor mijn hobby's aangemaakt.

--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
        <div class="row">
          <div class="col-md-6 secs">
            <h1 class="display-2">
-             <span class="display-2--welcome">
+             <!-- <span class="display-2--welcome">
                Hallo, Ik ben Murrel Venlo
-             </span>
+             </span> -->
+             <span class="display-2 test">
+              Hallo, Ik ben Murrel Venlo
+            </span>
              <span class="display-2--desc">
               Ik ben student programmeur aan de Thomas more Hogeschool in Geel. Hier zal je meer te weten komen over mij... 
             </span>
