Tepmlate voor ervaringen gemaakt.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="#">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ervaringen</a>
+                <a class="nav-link" href="/pages/experience.html">Ervaringen</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
