--- a/pages/experience.html
+++ b/pages/experience.html
@@ -27,13 +27,13 @@
                 <a class="nav-link" href="#">Wie ben ik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
+                <a class="nav-link" href="experience.html">Hobby's</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/experience.html">Ervaringen</a>
+                <a class="nav-link" href="experience.html">Ervaringen</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
@@ -46,51 +46,65 @@
         </div>
       </nav>
       <div class="container">
-          <div class="row text-center">
-            <h1>Mijn hobby’s</h1>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/images/voetbal.JPG" alt="voetbal">
-                <div class="card-body">
-                  <h5 class="card-title">Voetbal</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h4 class="text-center">Mijn ervaringen</h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="main-timeline9">
+                    <div class="timeline">
+                        <div class="timeline-content">
+                            <div class="circle"><span><i class="fa fa-globe"></i></span></div>
+                            <div class="content">
+                                <span class="year">2014 - 2015</span>
+                                <h4 class="title">Web Desginer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-content">
+                            <div class="circle"><span><i class="fa fa-rocket"></i></span></div>
+                            <div class="content">
+                                <span class="year">2015 - 2016</span>
+                                <h4 class="title">Web Developer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-content">
+                            <div class="circle"><span><i class="fa fa-briefcase"></i></span></div>
+                            <div class="content">
+                                <span class="year">2016 - 2017</span>
+                                <h4 class="title">Web Desginer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-content">
+                            <div class="circle"><span><i class="fa fa-mobile"></i></span></div>
+                            <div class="content">
+                                <span class="year">2017 - 2018</span>
+                                <h4 class="title">Web Developer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/images/gezelschap.jpg" alt="gezelschap">
-                <div class="card-body">
-                  <h5 class="card-title">Gezelschapsspelletjes</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/images/koken.jpeg" alt="koken">
-                <div class="card-body">
-                  <h5 class="card-title">Koken</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/images/vakantie.jpg" alt="vakantie">
-                <div class="card-body">
-                  <h5 class="card-title">Reizen</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
    <footer class="footer">
     <!-- Footer main -->
