--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Portfolio</title>
 </head>
-<body class="page-content">
+<body class="page-content  contact">
     <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container">
           <a class="navbar-brand" href="/">
-            <img src="images/LogoMj.png" alt="logo_mj" height="50" width="50">
+            <img src="/images/LogoMj.png" alt="logo_mj" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,94 +21,64 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Wie ben ik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
+                <a class="nav-link" href="experience.html">Hobby's</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/experience.html">Ervaringen</a>
+                <a class="nav-link" href="experience.html">Ervaringen</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contact.html">Contact</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-   <!-- Welcome section -->
-   <section id="home" class="welcome">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-6 secs">
-           <h1 class="display-2">
-             <span class="display-2--welcome">
-               Fawaka,<br> Ik ben<br> Murrel Venlo
-             </span>
-             <!-- <span class="display-2 test">
-              Hallo, Ik ben Murrel Venlo
-            </span> -->
-             <span class="display-2--desc">
-              Ik ben student programmeur aan de Thomas more Hogeschool in Geel. Hier zal je meer te weten komen over mij... 
-            </span>
-           </h1>
-         </div>
-         <div class="col-md-6 secs text-center">
-           <div class="img-sec bg-img">
-           <img src="images/campnou.jpg" alt="afb_mj" class="rounded-circle img-style mask">
+      <div class="container" style="height: 100vh;">
+        <h4 class="text-center">Contact</h4>
+        <div class="card">
+            <div class="card-header  text-center">
+              Featured
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+            </div>
+            <div class="card-footer text-muted">
+              2 days ago
+            </div>
           </div>
-         </div>
-       </div>
-     </div>
-   </section>
+      </div>
    <footer class="footer">
-    <!-- Footer main -->
-    <!-- <section class="footer-main">
-      <div class="footer-main-item">
-        <h2 class="ft-title">Over mij</h2>
-        <ul>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Customers</a></li>
-          <li><a href="#">Careers</a></li>
-        </ul>
-      </div>
-      <div class="footer-main-item">
-        <h2 class="ft-title">Resources</h2>
-        <ul>
-          <li><a href="#">Docs</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">eBooks</a></li>
-          <li><a href="#">Webinars</a></li>
-        </ul>
-      </div>
-      <div class="footer-main-item">
-        <h2 class="ft-title">Contact</h2>
-        <ul>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Sales</a></li>
-          <li><a href="#">Advertise</a></li>
-        </ul>
-      </div>
-      <div class="footer-main-item">
-        <h2 class="ft-title">Stay Updated</h2>
-        <p>Subscribe to our newsletter to get our latest news.</p>
-        <form>
-          <input type="email" name="email" placeholder="Enter email address">
-          <input type="submit" value="Subscribe">
-        </form>
-      </div>
-    </section> -->
    
     <!-- Footer social -->
     <section class="ft-social">
@@ -130,7 +100,8 @@
       </ul>
     </section>
   </footer>
-    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
