Links op de navbar gemaakt.

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#">Wie ben ik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="experience.html">Hobby's</a>
+                <a class="nav-link" href="hobby.html">Hobby's</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
