--- a/pages/hobby.html
+++ b/pages/hobby.html
@@ -27,19 +27,19 @@
                 <a class="nav-link" href="#">Wie ben ik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
+                <a class="nav-link" href="hobby.html">Hobby's</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/experience.html">Ervaringen</a>
+                <a class="nav-link" href="experience.html">Ervaringen</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
