Skills-pagina aan het maken.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="/pages/skills.html">Skills</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/pages/experience.html">Ervaringen</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="/pages/Portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/pages/contact.html">Contact</a>
