Soft skills sectie af.

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -47,17 +47,18 @@
       </nav>
       <div class="container">
         <h4 class="text-center">Mijn ervaringen</h4>
+        <p class="text-center">Ik heb al op verschillende domeinen en plaatsen ervaring opgedaan, ‘skils’ aangeleerd.</p>
         <div class="row">
             <div class="col-md-12">
                 <div class="main-timeline9">
                     <div class="timeline">
                         <div class="timeline-content">
-                            <div class="circle"><span><i class="fa fa-globe"></i></span></div>
+                            <div class="circle"><span><i class="fa-mind-share"></i></span></div>
                             <div class="content">
-                                <span class="year">2014 - 2015</span>
+                                <span class="year">Organiseren en Coördineren</span>
                                 <h4 class="title">Web Desginer</h4>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                  In Suriname hebben we een heel hechte familieband. Wij plannen jaarlijks heel wat samenkomsten in ruim familieverband, zowel met zussen en broers als met de veel uitgebreidere familie. Dit kunnen uitstappen zij maar ook jaarlijkse feestjes of familievergaderingen. Er komt steeds heel wat bij kijken om alles vlot te laten verlopen.
                                 </p>
                                 <div class="icon"><span></span></div>
                             </div>
