Hard skills sectie af.

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -56,10 +56,11 @@
       </div>
     </div>
   </nav>
+  <div class="bgc">
   <div class="container">
     <section class="skills">
       <div class="row text-center">
-        <h1>Skills</h1>
+        <h2>Hard Skills</h2>
       </div>
       <div class="row">
         <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
@@ -102,7 +103,10 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Databanken en SQL</h5>
-            <p class="card-text"></p>
+            <p class="card-text">
+              Als programmeurs, maken wij bij het ontwikkelen van een applicaties meestal gebruik van data. Met mijn kennis van relationele databanken,
+               is het makkelijker om gebruiksvriendelijke applicatie te ontwikkelen.
+            </p>
           </div>
         </div>
         <div class="card  text-center skills-card col-sm-12 col-md-6 col-6">
@@ -115,11 +119,17 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Javascript</h5>
-            <p class="card-text"></p>
+            <p class="card-text">
+              Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
+               begrijp, is minder lastig voor mij om "Frameworks" ervan te kunnen.
+            </p>
           </div>
         </div>
       </div>
     </section>
+  </div>
+  </div>
+  <div class="container">
     <section class="s-skills">
       <div class="row">
         <h2 class="text-center s-title">Soft skills</h2>
