--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
              <span class="display-2--desc">
               Ik ben student programmeur aan de Thomas more Hogeschool in Geel. Hier zal je meer te weten komen over mij... 
             </span>
+            <span class="cv">
+              <a href="/documents/cv.pdf" download="cv">Dowload hier mijn CV</a>
+            </span>
+            <!-- <a href="" id="/documents/cv.pdf" download="cv.pdf">Dowload mijn CV hier</a> -->
            </h1>
          </div>
          <div class="col-md-6 secs text-center">
@@ -86,7 +90,7 @@
         </div>
       </section>
 </footer>
-    
+    <script src="/js/index.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
