--- a/pages/hobby.html
+++ b/pages/hobby.html
@@ -59,7 +59,8 @@
           <img class="card-img-top" src="/images/voetbal.JPG" alt="voetbal">
           <div class="card-body">
             <h5 class="card-title">Voetballen</h5>
-            <p class="card-text">Als grote voetbalfan kan het niet anders dan dat ik zelf ook voetbal en me wil meten met de grote spelers. 
+            <p class="card-text">Als grote voetbalfan kan het niet anders dan dat ik zelf ook voetbal en me wil meten
+              met de grote spelers.
               Ik analyseer meestal de acties tijdens een wedstrijd van mijn favoriete voetbalspelers.</p>
             <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#football-modal">Lees verder</a>
           </div>
@@ -69,14 +70,18 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modal-title">Voetballen</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <p>Ik probeer dezelfde acties te ondernemen wanneer ik op het veld sta. Niet altijd met evenveel succes, maar het geeft me zelfvertrouwen en doorzettingsvermogen wanneer ik een wedstrijd speel.
-                  </p>
-                  <p>We spelen met vrienden, dus achteraf wordt er duchtig gediscussieerd en becommentarieerd over hoe iedereen op het veld stond. Dit is meestal even boeiend als de wedstrijd zelf spelen. Het geeft een hechter gevoel van samenhorigheid, samen één ploeg te zijn!</p>
-                  <p>Ik kijk er steeds naar uit om met mijn vrienden te voetballen. We zijn een hechte vriendengroep en dat is ook voelbaar in het dagelijkse leven. We zijn er voor elkaar en zullen elkaar door dik en dun ondersteunen. Natuurlijk maken we ook veel lol samen. Zo’n vriendengroep vind ik erg belangrijk.</p>
+                <p>Ik probeer dezelfde acties te ondernemen wanneer ik op het veld sta. Niet altijd met evenveel succes,
+                  maar het geeft me zelfvertrouwen en doorzettingsvermogen wanneer ik een wedstrijd speel.
+                </p>
+                <p>We spelen met vrienden, dus achteraf wordt er duchtig gediscussieerd en becommentarieerd over hoe
+                  iedereen op het veld stond. Dit is meestal even boeiend als de wedstrijd zelf spelen. Het geeft een
+                  hechter gevoel van samenhorigheid, samen één ploeg te zijn!</p>
+                <p>Ik kijk er steeds naar uit om met mijn vrienden te voetballen. We zijn een hechte vriendengroep en
+                  dat is ook voelbaar in het dagelijkse leven. We zijn er voor elkaar en zullen elkaar door dik en dun
+                  ondersteunen. Natuurlijk maken we ook veel lol samen. Zo’n vriendengroep vind ik erg belangrijk.</p>
               </div>
             </div>
           </div>
@@ -98,27 +103,40 @@
           <img class="card-img-top" src="/images/koken.jpeg" alt="koken">
           <div class="card-body">
             <h5 class="card-title">Koken</h5>
-            <p class="card-text">Wanneer ik iets lekkers heb bereid geeft me dit veel voldoening, zeker wanneer mijn disgenoten ook zie genieten van wat ik hen serveer.</p>
+            <p class="card-text">Wanneer ik iets lekkers heb bereid geeft me dit veel voldoening, zeker wanneer mijn
+              disgenoten ook zie genieten van wat ik hen serveer.</p>
             <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cooking-modal">Lees verder</a>
           </div>
         </div>
       </div>
-      
+
       <div class="modal fade" id="cooking-modal" tabindex="-1" arira-labelledby="modal-title" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="modal-title">Koken</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal"
-              aria-label="Close"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <p>Ik kook heel graag.  Het lijkt steeds weer een nieuwe uitdaging om een lekker gerecht te bereiden. Natuurlijk kan ik al vele gerechten bereiden zonder dat ik nog een kookboek nodig heb, maar soms probeer ik ook nieuwe gerechten uit.</p>
-                <p>De voorbereiding aan het koken vind ik één van de leuke dingen. In de groentewinkel de beste ingrediënten uitkiezen en de juiste kruiden vinden, dat is voor mij steeds een nieuwe boeiende en uitdaging. Ik vind het steeds fijn als ik kan aantonen dat ik met allerlei kleine dingen een lekker menu kan bereiden.</p>
-                <p>Vanuit mijn Surinaamse achtergrond weet ik hoe ik typische Surinaamse gerechten moet klaarmaken. Ik probeer met deze gerechten mijn vrienden ook steeds te verrassen. Ik heb nog nooit slechte recensies ontvangen, dat is wel leuk.</p>
-                <p>Hier in België is de manier van koken toch wel heel anders dan in mijn thuisland. Hier worden veel aardappelen bereid en worden de meeste groenten afgekookt. Wij gebruiken veel rijst en onze groenten worden dikwijls bereid in een wok of gestoofd in een kookpot. Het is voor mij een uitdaging om deze twee manieren van koken samen te brengen en te experimenteren. Zo probeer ik regelmatig wat nieuws klaar te maken dat beide ‘keukens’ samenbrengt.</p>
-                <p>Natuurlijk hebben wij ook onze specifieke groenten en kruiden, die moet ik aankopen in een Surinaamse winkel want die zijn niet verkrijgbaar in de Belgische winkels.</p>
-                <p>Zelf koken, nieuwe smaken en kookmethodes uitproberen, een lekkere maaltijd bereiden geeft me een goed gevoel.</p>
+              <p>Ik kook heel graag. Het lijkt steeds weer een nieuwe uitdaging om een lekker gerecht te bereiden.
+                Natuurlijk kan ik al vele gerechten bereiden zonder dat ik nog een kookboek nodig heb, maar soms probeer
+                ik ook nieuwe gerechten uit.</p>
+              <p>De voorbereiding aan het koken vind ik één van de leuke dingen. In de groentewinkel de beste
+                ingrediënten uitkiezen en de juiste kruiden vinden, dat is voor mij steeds een nieuwe boeiende en
+                uitdaging. Ik vind het steeds fijn als ik kan aantonen dat ik met allerlei kleine dingen een lekker menu
+                kan bereiden.</p>
+              <p>Vanuit mijn Surinaamse achtergrond weet ik hoe ik typische Surinaamse gerechten moet klaarmaken. Ik
+                probeer met deze gerechten mijn vrienden ook steeds te verrassen. Ik heb nog nooit slechte recensies
+                ontvangen, dat is wel leuk.</p>
+              <p>Hier in België is de manier van koken toch wel heel anders dan in mijn thuisland. Hier worden veel
+                aardappelen bereid en worden de meeste groenten afgekookt. Wij gebruiken veel rijst en onze groenten
+                worden dikwijls bereid in een wok of gestoofd in een kookpot. Het is voor mij een uitdaging om deze twee
+                manieren van koken samen te brengen en te experimenteren. Zo probeer ik regelmatig wat nieuws klaar te
+                maken dat beide ‘keukens’ samenbrengt.</p>
+              <p>Natuurlijk hebben wij ook onze specifieke groenten en kruiden, die moet ik aankopen in een Surinaamse
+                winkel want die zijn niet verkrijgbaar in de Belgische winkels.</p>
+              <p>Zelf koken, nieuwe smaken en kookmethodes uitproberen, een lekkere maaltijd bereiden geeft me een goed
+                gevoel.</p>
             </div>
           </div>
         </div>
@@ -138,20 +156,20 @@
   </div>
   <footer class="foot">
     <section class="ft-social">
-        <ul class="ft-social-list">
-          <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-        </ul>
-      </section>
-      <section class="ft-copy">
-        <div class="sec-copy">
-          <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
-        </div>
-      </section>
-</footer>
+      <ul class="ft-social-list">
+        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+    </section>
+    <section class="ft-copy">
+      <div class="sec-copy">
+        <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+      </div>
+    </section>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
