Nog twee projecten te gaan bij portfolio-pagina.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               Ik ben student programmeur aan de Thomas more Hogeschool in Geel. Hier zal je meer te weten komen over mij... 
             </span>
             <span class="cv">
-              <a href="/documents/cv.pdf" download="cv">Dowload hier mijn CV</a>
+              <a href="/documents/cv.pdf" download="cv">Dowload hier mijn cv</a>
             </span>
             <!-- <a href="" id="/documents/cv.pdf" download="cv.pdf">Dowload mijn CV hier</a> -->
            </h1>
